--- a/movie-info-service/src/main/resources/application.properties
+++ b/movie-info-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=movie-info-service
-server.port=8082
+spring.cloud.config.uri=http://localhost:8888
+management.endpoints.web.exposure.include=refresh
