--- a/rating-data-service/src/main/resources/application.properties
+++ b/rating-data-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=rating-data-service
-server.port=8083
+spring.cloud.config.uri=http://localhost:8888
+management.endpoints.web.exposure.include=*
